--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
-    "node-normalize-scss": "^8.0.1"
+    "node-normalize-scss": "^8.0.1",
+    "rollup": "^1.18.0"
   },
   "browserslist": [
     "last 2 versions",
